--- a/Kernel/Makefile
+++ b/Kernel/Makefile
@@ -1,6 +1,7 @@
 include Makefile.inc
 
-KERNEL=kernel.bin
+KERNEL_BIN=kernel.bin
+KERNEL_ELF=kernel.elf
 SOURCES=$(wildcard *.c)
 SOURCES_ASM=$(wildcard asm/*.asm)
 SOURCES_INTERRUPTS = $(wildcard interrupts/*.c)
@@ -21,10 +22,13 @@ else
     MEMORY_FLAGS = 
 endif
 
-all: $(KERNEL)
+all: $(KERNEL_BIN) $(KERNEL_ELF)
 
-$(KERNEL): $(LOADEROBJECT) $(OBJECTS) $(STATICLIBS) $(OBJECTS_ASM) $(OBJECTS_INTERRUPTS) $(OBJECTS_MEMORY)
-	$(LD) $(LDFLAGS) -T kernel.ld -o $(KERNEL) $(LOADEROBJECT) $(OBJECTS) $(OBJECTS_ASM) $(OBJECTS_INTERRUPTS) $(OBJECTS_MEMORY) $(STATICLIBS)
+$(KERNEL_BIN): $(LOADEROBJECT) $(OBJECTS) $(STATICLIBS) $(OBJECTS_ASM) $(OBJECTS_INTERRUPTS) $(OBJECTS_MEMORY)
+	$(LD) $(LDFLAGS) -T kernel.ld -o $(KERNEL_BIN) $(LOADEROBJECT) $(OBJECTS) $(OBJECTS_ASM) $(OBJECTS_INTERRUPTS) $(OBJECTS_MEMORY) $(STATICLIBS)
+
+$(KERNEL_ELF): $(LOADEROBJECT) $(OBJECTS) $(STATICLIBS) $(OBJECTS_ASM) $(OBJECTS_INTERRUPTS) $(OBJECTS_MEMORY)
+	$(LD) $(LDFLAGS) -T kernel.ld --oformat=elf64-x86-64 -o $(KERNEL_ELF) $(LOADEROBJECT) $(OBJECTS) $(OBJECTS_ASM) $(OBJECTS_INTERRUPTS) $(OBJECTS_MEMORY) $(STATICLIBS)
 
 %.o: %.c
 	$(GCC) $(GCCFLAGS) $(MEMORY_FLAGS) -I./include -c $< -o $@
