--- a/Userland/SampleCodeModule/Makefile
+++ b/Userland/SampleCodeModule/Makefile
@@ -1,6 +1,7 @@
 include ../Makefile.inc
 
-MODULE=0000-sampleCodeModule.bin  
+MODULE_BIN=0000-sampleCodeModule.bin
+MODULE_ELF=0000-sampleCodeModule.elf
 SOURCES=$(wildcard *.c)
 SOURCES_ASM=$(wildcard asm/*.asm)
 SOURCES_C=$(wildcard c/*.c)
@@ -8,12 +9,17 @@ OBJECTS=$(SOURCES:.c=.o)
 OBJECTS_ASM=$(SOURCES_ASM:.asm=.o)
 OBJECTS_C=$(SOURCES_C:.c=.o)
 
-all: $(MODULE)
+all: $(MODULE_BIN) $(MODULE_ELF)
 
-$(MODULE): $(OBJECTS) $(OBJECTS_ASM) $(OBJECTS) $(OBJECTS_C)
-	$(LD) $(LDFLAGS) -T sampleCodeModule.ld -o ../$(MODULE) $(OBJECTS) $(OBJECTS_ASM) $(OBJECTS_C)
+$(MODULE_BIN): $(OBJECTS) $(OBJECTS_ASM) $(OBJECTS) $(OBJECTS_C)
+	$(LD) $(LDFLAGS) -T sampleCodeModule.ld -o ../$(MODULE_BIN) $(OBJECTS) $(OBJECTS_ASM) $(OBJECTS_C)
+$(MODULE_ELF): $(OBJECTS) $(OBJECTS_ASM) $(OBJECTS) $(OBJECTS_C)
+	$(LD) $(LDFLAGS) -T sampleCodeModule.ld --oformat=elf64-x86-64 -o ../$(MODULE_ELF) $(OBJECTS) $(OBJECTS_ASM) $(OBJECTS_C)
+
+
 %.o: %.c
 	$(GCC) $(GCCFLAGS) -I./include -c $< -o $@
+
 %.o: %.asm
 	$(ASM) $(ASMFLAGS) $< -o $@
 
@@ -21,4 +27,3 @@ clean:
 	rm -rf asm/*.o c/*.o *.o
 
 .PHONY: all clean print
-
