fix: quick-fix to the test_mm and organization of some files

--- a/Kernel/Makefile
+++ b/Kernel/Makefile
@@ -5,10 +5,12 @@ KERNEL_ELF=kernel.elf
 SOURCES=$(wildcard *.c)
 SOURCES_ASM=$(wildcard asm/*.asm)
 SOURCES_INTERRUPTS = $(wildcard interrupts/*.c)
+SOURCES_DRIVERS = $(wildcard drivers/*.c)
 SOURCES_MEMORY = $(wildcard memory/*.c)
 OBJECTS=$(SOURCES:.c=.o)
 OBJECTS_ASM=$(SOURCES_ASM:.asm=.o)
 OBJECTS_INTERRUPTS=$(SOURCES_INTERRUPTS:.c=.o)
+OBJECTS_DRIVERS=$(SOURCES_DRIVERS:.c=.o)
 OBJECTS_MEMORY=$(SOURCES_MEMORY:.c=.o)
 LOADERSRC=loader.asm
 
@@ -24,11 +26,11 @@ endif
 
 all: $(KERNEL_BIN) $(KERNEL_ELF)
 
-$(KERNEL_BIN): $(LOADEROBJECT) $(OBJECTS) $(STATICLIBS) $(OBJECTS_ASM) $(OBJECTS_INTERRUPTS) $(OBJECTS_MEMORY)
-	$(LD) $(LDFLAGS) -T kernel.ld -o $(KERNEL_BIN) $(LOADEROBJECT) $(OBJECTS) $(OBJECTS_ASM) $(OBJECTS_INTERRUPTS) $(OBJECTS_MEMORY) $(STATICLIBS)
+$(KERNEL_BIN): $(LOADEROBJECT) $(OBJECTS) $(STATICLIBS) $(OBJECTS_ASM) $(OBJECTS_INTERRUPTS) $(OBJECTS_DRIVERS) $(OBJECTS_MEMORY)
+	$(LD) $(LDFLAGS) -T kernel.ld -o $(KERNEL_BIN) $(LOADEROBJECT) $(OBJECTS) $(OBJECTS_ASM) $(OBJECTS_INTERRUPTS) $(OBJECTS_DRIVERS) $(OBJECTS_MEMORY) $(STATICLIBS)
 
-$(KERNEL_ELF): $(LOADEROBJECT) $(OBJECTS) $(STATICLIBS) $(OBJECTS_ASM) $(OBJECTS_INTERRUPTS) $(OBJECTS_MEMORY)
-	$(LD) $(LDFLAGS) -T kernel.ld --oformat=elf64-x86-64 -o $(KERNEL_ELF) $(LOADEROBJECT) $(OBJECTS) $(OBJECTS_ASM) $(OBJECTS_INTERRUPTS) $(OBJECTS_MEMORY) $(STATICLIBS)
+$(KERNEL_ELF): $(LOADEROBJECT) $(OBJECTS) $(STATICLIBS) $(OBJECTS_ASM) $(OBJECTS_INTERRUPTS) $(OBJECTS_DRIVERS) $(OBJECTS_MEMORY)
+	$(LD) $(LDFLAGS) -T kernel.ld --oformat=elf64-x86-64 -o $(KERNEL_ELF) $(LOADEROBJECT) $(OBJECTS) $(OBJECTS_ASM) $(OBJECTS_INTERRUPTS) $(OBJECTS_DRIVERS) $(OBJECTS_MEMORY) $(STATICLIBS)
 
 %.o: %.c
 	$(GCC) $(GCCFLAGS) $(MEMORY_FLAGS) -I./include -c $< -o $@
@@ -40,6 +42,6 @@ $(LOADEROBJECT):
 	$(ASM) $(ASMFLAGS) $(LOADERSRC) -o $(LOADEROBJECT)
 
 clean:
-	rm -rf asm/*.o *.o *.bin memory/*.o interrupts/*.o
+	rm -rf asm/*.o *.o *.bin memory/*.o interrupts/*.o *.elf drivers/*.o
 
 .PHONY: all clean
