creation of memory syscalls and changes in the memory management file struture

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "files.associations": {
-        "libc.h": "c"
+        "libc.h": "c",
+        "string-lib.h": "c",
+        "memory_manager.h": "c"
     }
 }
