fix:funcionamiento memoria y sus variables

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "libc.h": "c",
         "string-lib.h": "c",
-        "memory_manager.h": "c"
+        "memory_manager.h": "c",
+        "group_memory_manager.h": "c"
     }
 }
