--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
         "compare": "c",
         "cstdint": "c",
         "process.h": "c",
-        "pcb.h": "c"
+        "pcb.h": "c",
+        "videodriver.h": "c"
     }
 }
