--- a/Kernel/Makefile
+++ b/Kernel/Makefile
@@ -8,12 +8,14 @@ SOURCES_INTERRUPTS = $(wildcard interrupts/*.c)
 SOURCES_DRIVERS = $(wildcard drivers/*.c)
 SOURCES_MEMORY = $(wildcard memory/*.c)
 SOURCES_PROCESS = $(wildcard process/*.c)
+SOURCES_SYNCRO = $(wildcard syncro/*.c)
 OBJECTS=$(SOURCES:.c=.o)
 OBJECTS_ASM=$(SOURCES_ASM:.asm=.o)
 OBJECTS_INTERRUPTS=$(SOURCES_INTERRUPTS:.c=.o)
 OBJECTS_DRIVERS=$(SOURCES_DRIVERS:.c=.o)
 OBJECTS_MEMORY=$(SOURCES_MEMORY:.c=.o)
 OBJECTS_PROCESS=$(SOURCES_PROCESS:.c=.o)
+OBJECTS_SYNCRO=$(SOURCES_SYNCRO:.c=.o)
 LOADERSRC=loader.asm
 
 LOADEROBJECT=$(LOADERSRC:.asm=.o)
@@ -28,11 +30,11 @@ endif
 
 all: $(KERNEL_BIN) $(KERNEL_ELF)
 
-$(KERNEL_BIN): $(LOADEROBJECT) $(OBJECTS) $(STATICLIBS) $(OBJECTS_ASM) $(OBJECTS_INTERRUPTS) $(OBJECTS_DRIVERS) $(OBJECTS_MEMORY) $(OBJECTS_PROCESS)
-	$(LD) $(LDFLAGS) -T kernel.ld -o $(KERNEL_BIN) $(LOADEROBJECT) $(OBJECTS) $(OBJECTS_ASM) $(OBJECTS_INTERRUPTS) $(OBJECTS_DRIVERS) $(OBJECTS_MEMORY) $(OBJECTS_PROCESS) $(STATICLIBS)
+$(KERNEL_BIN): $(LOADEROBJECT) $(OBJECTS) $(STATICLIBS) $(OBJECTS_ASM) $(OBJECTS_INTERRUPTS) $(OBJECTS_DRIVERS) $(OBJECTS_MEMORY) $(OBJECTS_PROCESS) $(OBJECTS_SYNCRO)
+	$(LD) $(LDFLAGS) -T kernel.ld -o $(KERNEL_BIN) $(LOADEROBJECT) $(OBJECTS) $(OBJECTS_ASM) $(OBJECTS_INTERRUPTS) $(OBJECTS_DRIVERS) $(OBJECTS_MEMORY) $(OBJECTS_PROCESS) $(OBJECTS_SYNCRO) $(STATICLIBS)
 
 $(KERNEL_ELF): $(LOADEROBJECT) $(OBJECTS) $(STATICLIBS) $(OBJECTS_ASM) $(OBJECTS_INTERRUPTS) $(OBJECTS_DRIVERS) $(OBJECTS_MEMORY) $(OBJECTS_PROCESS)
-	$(LD) $(LDFLAGS) -T kernel.ld --oformat=elf64-x86-64 -o $(KERNEL_ELF) $(LOADEROBJECT) $(OBJECTS) $(OBJECTS_ASM) $(OBJECTS_INTERRUPTS) $(OBJECTS_DRIVERS) $(OBJECTS_MEMORY) $(OBJECTS_PROCESS) $(STATICLIBS)
+	$(LD) $(LDFLAGS) -T kernel.ld --oformat=elf64-x86-64 -o $(KERNEL_ELF) $(LOADEROBJECT) $(OBJECTS) $(OBJECTS_ASM) $(OBJECTS_INTERRUPTS) $(OBJECTS_DRIVERS) $(OBJECTS_MEMORY) $(OBJECTS_PROCESS) $(OBJECTS_SYNCRO) $(STATICLIBS)
 
 %.o: %.c
 	$(GCC) $(GCCFLAGS) $(MEMORY_FLAGS) -I./include -c $< -o $@
