cat, wc, filter, ctrld
This reverts commit aa3fc7ebc378f34a36a40c85833e1950e26c8354.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,6 +25,8 @@
         "sem.h": "c",
         "stddef.h": "c",
         "pipe.h": "c",
-        "naiveconsole.h": "c"
+        "naiveconsole.h": "c",
+        "ostream": "c",
+        "print": "c"
     }
 }
