fixes but bug still exists

--- a/Kernel/Makefile
+++ b/Kernel/Makefile
@@ -2,24 +2,13 @@ include Makefile.inc
 
 KERNEL_BIN=kernel.bin
 KERNEL_ELF=kernel.elf
-SOURCES=$(wildcard *.c)
-SOURCES_ASM=$(wildcard asm/*.asm)
-SOURCES_INTERRUPTS = $(wildcard interrupts/*.c)
-SOURCES_DRIVERS = $(wildcard drivers/*.c)
-SOURCES_MEMORY = $(wildcard memory/*.c)
-SOURCES_PROCESS = $(wildcard process/*.c)
-SOURCES_SYNCRO = $(wildcard syncro/*.c)
-OBJECTS=$(SOURCES:.c=.o)
-OBJECTS_ASM=$(SOURCES_ASM:.asm=.o)
-OBJECTS_INTERRUPTS=$(SOURCES_INTERRUPTS:.c=.o)
-OBJECTS_DRIVERS=$(SOURCES_DRIVERS:.c=.o)
-OBJECTS_MEMORY=$(SOURCES_MEMORY:.c=.o)
-OBJECTS_PROCESS=$(SOURCES_PROCESS:.c=.o)
-OBJECTS_SYNCRO=$(SOURCES_SYNCRO:.c=.o)
-LOADERSRC=loader.asm
-
-LOADEROBJECT=$(LOADERSRC:.asm=.o)
-STATICLIBS=
+SOURCES_C = $(wildcard *.c interrupts/*.c drivers/*.c memory/*.c process/*.c syncro/*.c)
+SOURCES_ASM = $(wildcard asm/*.asm)
+OBJECTS_C = $(SOURCES_C:.c=.o)
+OBJECTS_ASM = $(SOURCES_ASM:.asm=.o)
+LOADERSRC = loader.asm
+LOADEROBJECT = $(LOADERSRC:.asm=.o)
+STATICLIBS =
 
 # Selección del administrador de memoria
 ifeq ($(MEMORY_MANAGER),buddy)
@@ -30,11 +19,12 @@ endif
 
 all: $(KERNEL_BIN) $(KERNEL_ELF)
 
-$(KERNEL_BIN): $(LOADEROBJECT) $(OBJECTS) $(STATICLIBS) $(OBJECTS_ASM) $(OBJECTS_INTERRUPTS) $(OBJECTS_DRIVERS) $(OBJECTS_MEMORY) $(OBJECTS_PROCESS) $(OBJECTS_SYNCRO)
-	$(LD) $(LDFLAGS) -T kernel.ld -o $(KERNEL_BIN) $(LOADEROBJECT) $(OBJECTS) $(OBJECTS_ASM) $(OBJECTS_INTERRUPTS) $(OBJECTS_DRIVERS) $(OBJECTS_MEMORY) $(OBJECTS_PROCESS) $(OBJECTS_SYNCRO) $(STATICLIBS)
+$(KERNEL_BIN): $(LOADEROBJECT) $(OBJECTS_ASM) $(OBJECTS_C) $(STATICLIBS)
+	$(LD) $(LDFLAGS) -T kernel.ld -o $@ $^
 
-$(KERNEL_ELF): $(LOADEROBJECT) $(OBJECTS) $(STATICLIBS) $(OBJECTS_ASM) $(OBJECTS_INTERRUPTS) $(OBJECTS_DRIVERS) $(OBJECTS_MEMORY) $(OBJECTS_PROCESS)
-	$(LD) $(LDFLAGS) -T kernel.ld --oformat=elf64-x86-64 -o $(KERNEL_ELF) $(LOADEROBJECT) $(OBJECTS) $(OBJECTS_ASM) $(OBJECTS_INTERRUPTS) $(OBJECTS_DRIVERS) $(OBJECTS_MEMORY) $(OBJECTS_PROCESS) $(OBJECTS_SYNCRO) $(STATICLIBS)
+
+$(KERNEL_ELF): $(LOADEROBJECT) $(OBJECTS_ASM) $(OBJECTS_C) $(STATICLIBS)
+	$(LD) $(LDFLAGS) -T kernel.ld --oformat=elf64-x86-64 -o $@ $^
 
 %.o: %.c
 	$(GCC) $(GCCFLAGS) $(MEMORY_FLAGS) -I./include -c $< -o $@
