removal of syscalls

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,6 +27,7 @@
         "pipe.h": "c",
         "naiveconsole.h": "c",
         "ostream": "c",
-        "print": "c"
+        "print": "c",
+        "syscallsmanager.h": "c"
     }
 }
