--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -28,6 +28,7 @@
         "naiveconsole.h": "c",
         "ostream": "c",
         "print": "c",
-        "syscallsmanager.h": "c"
+        "syscallsmanager.h": "c",
+        "interrupts.h": "c"
     }
 }
