--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -29,6 +29,7 @@
         "ostream": "c",
         "print": "c",
         "syscallsmanager.h": "c",
-        "interrupts.h": "c"
+        "interrupts.h": "c",
+        "sound.h": "c"
     }
 }
