--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -34,6 +34,7 @@
         "stdint.h": "c",
         "stdbool.h": "c",
         "shell-lib.h": "c",
-        "command-lib.h": "c"
+        "command-lib.h": "c",
+        "phylo.h": "c"
     }
 }
