--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -35,6 +35,7 @@
         "stdbool.h": "c",
         "shell-lib.h": "c",
         "command-lib.h": "c",
-        "phylo.h": "c"
+        "phylo.h": "c",
+        "cstring": "c"
     }
 }
